# rohit-common

./: pyproject.toml  requirements.txt
rohit_common/: before_migrate_patches.py  hooks.py
rohit_common/diffs/: erpnext-v15.diff  frappe-v15.diff
